Closed
Bug 1366700
Opened 8 years ago
Closed 8 years ago
Crash [@ mozilla::gl::GLContextEGLFactory::Create ]
Categories
(Core :: Graphics: WebRender, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla57
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox55 | --- | unaffected |
firefox56 | --- | unaffected |
firefox57 | --- | fixed |
People
(Reporter: jan, Assigned: sotaro)
References
(Blocks 1 open bug)
Details
(Keywords: crash, nightly-community, Whiteboard: [wr-mvp] gfx-noted)
Crash Data
Attachments
(1 file, 1 obsolete file)
4.75 KB,
patch
|
sotaro
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:55.0) Gecko/20100101 Firefox/55.0
Build ID: 20170521100319
Steps to reproduce:
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from bug 1341478 comment #4)
> (In reply to Darkspirit from bug 1341478 comment #3)
> > Please consider to reopen this bug.
>
> Let's open a new bug for the crash you are seeing. This one was filed for
> Android, and the one you are seeing is in a webrender codepath which is
> different although the signature is the same.
Windows 10 x64: crash while doing a Radeon RX480 driver update. (After my whole desktop turned black for a second when windows activated the new driver).
gpu process force-enabled, webrender enabled, hardware accelleration (force-)enabled where possible
Meldungs-ID Sendedatum
bp-897e9aee-9f80-435d-a90f-9acf90170521 21.05.2017 15:09
= [@ mozilla::gl::GLContextEGLFactory::Create ]
= this bug
bp-8177c9fe-a27e-4313-9276-30e500170521 21.05.2017 15:08
= [@ mozilla::layers::PWebRenderBridgeChild::SendCreate ]
= bug 1350408
Reporter | ||
Updated•8 years ago
|
Updated•8 years ago
|
Depends on: wr-stability
Updated•8 years ago
|
Whiteboard: gfx-noted
Reporter | ||
Updated•8 years ago
|
Severity: normal → critical
Keywords: crash,
nightly-community
Updated•8 years ago
|
Blocks: stage-wr-nightly, wr-stability
No longer depends on: wr-stability
Updated•8 years ago
|
Priority: -- → P3
Comment 1•8 years ago
|
||
This is #10 top crash for 20170904 nightly.
mozilla::gl::GLContextEGLFactory::Create
mozilla::gl::GLContextProviderEGL::CreateForCompositorWidget
mozilla::wr::NewRenderer::Run
mozilla::wr::RenderThread::RunEvent
mozilla::detail::RunnableMethodImpl<T>::Run
MessageLoop::DoWork
base::MessagePumpDefault::Run
MessageLoop::RunHandler
MessageLoop::Run
base::Thread::ThreadMain
`anonymous namespace'::ThreadFunc
BaseThreadInitThunk
RtlUserThreadStart
Updated•8 years ago
|
Priority: P3 → P2
Whiteboard: gfx-noted → [wr-mvp] gfx-noted
Updated•8 years ago
|
status-firefox56:
--- → unaffected
status-firefox57:
--- → unaffected
Comment 2•8 years ago
|
||
There are 646 crashes in nightly 57 for signature "mozilla::gl::GLContextEGLFactory::Create" (see [1]).
This crash appeared in nightly 55 with buildid 20170330030213.
There are no crash in beta 56 (even if there are in nightly 56) and in release 55.
In analyzing the backtrace, the bug may have been introduced by patch [2] to fix bug 1323316.
:sotaro, could you investigate please ?
[1] http://bit.ly/2jpR0XM
[2] https://hg.mozilla.org/mozilla-central/rev?node=69a8dd0935e25869d9f33440d92f317535843e09
Assignee | ||
Comment 3•8 years ago
|
||
I take a look.
Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)
Updated•8 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: P2 → P1
Target Milestone: --- → mozilla57
Assignee | ||
Comment 4•8 years ago
|
||
Assignee | ||
Comment 5•8 years ago
|
||
Assignee | ||
Updated•8 years ago
|
Attachment #8908496 -
Flags: review?(jgilbert)
Comment 6•8 years ago
|
||
I guess while you're doing this, can you also remove the "\n" from the rest of the MOZ_CRASHes in this file? Then we can dupe bug 1400070 to this one.
Updated•8 years ago
|
Attachment #8908496 -
Flags: review?(jgilbert) → review+
Sotaro, is this WebRender only, or does it affect Firefox even when WebRender is disabled?
Flags: needinfo?(sotaro.ikeda.g)
Assignee | ||
Comment 8•8 years ago
|
||
(In reply to Milan Sreckovic [:milan] from comment #7)
> Sotaro, is this WebRender only, or does it affect Firefox even when
> WebRender is disabled?
It is WebRender only.
Flags: needinfo?(sotaro.ikeda.g)
Assignee | ||
Comment 9•8 years ago
|
||
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #6)
> I guess while you're doing this, can you also remove the "\n" from the rest
> of the MOZ_CRASHes in this file? Then we can dupe bug 1400070 to this one.
Ok, I'll update the patch.
Assignee | ||
Comment 10•8 years ago
|
||
Attachment #8908496 -
Attachment is obsolete: true
Attachment #8909560 -
Flags: review+
Assignee | ||
Comment 11•8 years ago
|
||
Comment 12•8 years ago
|
||
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/cdecec06131e
Remove MOZ_CRASH in GLContextEGLFactory::Create r=jgilbert
Updated•8 years ago
|
Comment 14•8 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Updated•8 years ago
|
status-firefox55:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•