Bug 1366700 - Remove MOZ_CRASH in GLContextEGLFactory::Create r=jgilbert